created a test component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,20 @@
-<!-- <div>
-  <img src="../assets/Logo.png" alt="college_Logo">
-  <h1>TechCrusiers</h1>
-  <ul>
-    <li>K.ShowriBabu</li>
-    <li>M.Jagadeesh</li>
-    <li>K.Rahul</li>
-    <li>P.BalaKoteswarao</li>
-    <li>G.Prakash</li>
-  </ul>
+<!-- <div class="main-div">
 
+  <img src="../assets/Logo.png" alt="college_Logo">
+  <h1>KKR & KSR INSTITUTE OF TECHNOLOGY AND SCIENCES</h1>
+
+  <div class="team">
+    <h2>TechCrusiers :</h2>
+    <ul>
+      <li>K.Showri Babu</li>
+      <li>M.Jagadeeswara Reddy</li>
+      <li>K.Rahul</li>
+      <li>P.BalaKoteswararao</li>
+      <li>G.Prakash Babu</li>
+    </ul>
+  </div>
+  
 </div> -->
-<app-showri></app-showri>
+<!-- <app-showri></app-showri> -->
+<app-test></app-test>
 <router-outlet></router-outlet>
