--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,29 +1,67 @@
-div{
-
-    align-items:center;
+h1{
+    color:red;
+    letter-spacing:3px;
+    font-weight:bolder;
+    font-size:38px;
+    text-shadow: 2px 2px 1px white;
     text-align: center;
+
+}
+
+img{
+    /* width:300px;
+    height: 150px;
+    border-radius: 12px; */
+    position:fixed;
+    left:8px;
+    width:120px;
+    height:120px;
+    top: 8px;
+
+}
+
+
+
+.main-div{
+
+    /* align-items:center; */
+    /* text-align: center; */
     background-color: rgb(75, 221, 17);
     border-radius: 12px;
+    height:700px;
+}
 
+.team{
+
+    margin-top:80px;
+
+}
+
+.team h2{
+    font-weight: bolder;
+    font-size:32px;
+    margin-left:20px;
+    text-shadow: 2px 2px 1px white;
 
 
 }
-img{
-    width:300px;
-    height: 150px;
-    border-radius: 12px;
 
+.team ul{
+
+    text-align: center;
+    align-items: center;
+
+    
 }
-ul li{
+.team ul li{
+
     list-style: none;
     font-size:23px;
     font-weight: bold;
-
+    margin: 10px;
+    padding:20px;
+    background-color: white;
+    border-radius:18px;
 }
-h1{
-    color:White;
-    letter-spacing:2px;
-    background-color:red;
-    font-weight:bolder;
 
-}
+
