--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,36 @@
   
 </div> -->
 <!-- <app-showri></app-showri> -->
-<app-test></app-test>
+<!-- <app-test></app-test> -->
+
+
+
+<!-- Here instead of invoke..........use anchor tag.... -->
+<!-- 
+<div>
+
+<a routerLink="/aboutus">AboutUs</a>
+<a routerLink="/contactus">ContactUS</a>
+
+</div> -->
+
+<div class="main">
+<div class="nav-bar">
+  <ul>
+    <li><a routerLink="/aboutus"><button class="btn btn-primary">About</button></a></li>
+    <li><a routerLink="/contactus"><button class="btn btn-success">Contact</button></a></li>
+    <li><a routerLink="/register"><button class="btn btn-warning">Signup</button></a></li>
+    <li><a routerLink="/login"><button class="btn btn-primary">Login</button></a></li>
+
+  </ul>
+</div>
+</div>
+<!-- <app-contactus></app-contactus> -->
+<!-- <app-about-us></app-about-us> -->
+
+
+
+
+
+
 <router-outlet></router-outlet>
