--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,9 +11,9 @@
         <p><span>Data from the template variable:</span> <br>{{loginFrom.value|json}}</p>
         <p><span>Data from the Controller:</span><br>{{loginmodel|json}}</p>
 
-        <form #loginFrom="ngForm">
+        <form #loginFrom="ngForm" (ngSubmit)="onLogin()">
 
-            <div class="from-group">       
+            <div class="from-group" >       
                 <label>Name:</label>
                 <input type="text" class="form-control" name="name" [(ngModel)]="loginmodel.name" />
             </div>     
