--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -18,3 +18,14 @@
     align-items:center;
     font-weight:bolder;
 }
+
+.ot{
+    align-items: center;
+    text-align: center;
+    color:red;
+    /* background-color:#fff; */
+    /* margin:20px; */
+    padding:12px;
+
+
+}
