WE are on practice:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@
     <li><a routerLink="/contactus"><button class="btn btn-success">Contact</button></a></li>
     <li><a routerLink="/register"><button class="btn btn-warning">Signup</button></a></li>
     <li><a routerLink="/login"><button class="btn btn-primary">Login</button></a></li>
+    <li><a routerLink="/file-upload"><button class="btn btn-success">File Upload</button></a></li>
 
   </ul>
 </div>
